--- a/src/app/events/list-events/upcoming-events/upcoming-events.component.html
+++ b/src/app/events/list-events/upcoming-events/upcoming-events.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="upcomingEvents | async as events; else noEvent">
+<div class="container" *ngIf="upcomingEvents | async as events; else loading">
   <mat-accordion>
     <mat-expansion-panel *ngFor="let event of events">
       <mat-expansion-panel-header>
@@ -21,12 +21,22 @@
       </div>
     </mat-expansion-panel>
   </mat-accordion>
+  <button class="add" mat-raised-button color="accent">
+    <i routerLink="create" class="material-icons">
+      add
+    </i>
+  </button>
 </div>
-<ng-template #noEvent>
-  <div class="spinner-container">
+<ng-template #loading>
+  <div class="spinner-container" *ngIf="stillLoading; else notLoading">
     <mat-spinner></mat-spinner>
   </div>
-  <button class="add" mat-raised-button>
+  <ng-template class="spinner-container" #notLoading>
+    <div class="spinner-container">
+      <h2>Sorry, no events!</h2>
+    </div>
+  </ng-template>
+  <button class="add" mat-raised-button color="accent">
     <i routerLink="create" class="material-icons">
       add
     </i>
