--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -1,1 +1,12 @@
-<h1>user-profile works!</h1>
+<!-- <div class="container">
+    <mat-card *ngIf="auth.user$ | async as user">
+        <mat-card-header>
+            <mat-chip-avatar *ngIf="user.">
+                <img [href]="user.">
+            </mat-chip-avatar>
+            <mat-chip-avatar>
+                <img [href]="user.">
+            </mat-chip-avatar>
+        </mat-card-header>
+    </mat-card>
+</div> -->
