--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,3 +16,9 @@ mat-toolbar {
 button i {
   font-size: 2.5em;
 }
+
+.group {
+  display: flex;
+  justify-content: space-around;
+  border-bottom: 2px solid black;
+}
