--- a/src/app/events/list-events/past-events/past-events.component.scss
+++ b/src/app/events/list-events/past-events/past-events.component.scss
@@ -1,6 +1,6 @@
 .spinner-container {
   display: flex;
   justify-content: center;
-  margin-top: 40px;
-  margin-bottom: 30px;
+  padding: 30px;
+  background-color: white;
 }
