--- a/src/app/food/list-food/list-food.component.html
+++ b/src/app/food/list-food/list-food.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="food$ | async as food; else noFood">
+<div class="container" *ngIf="food$ | async as food; else loading">
   <mat-accordion>
     <mat-expansion-panel *ngFor="let item of food">
       <mat-expansion-panel-header>
@@ -17,7 +17,12 @@
       <div class="expanded-panel">
         <mat-list>
           <mat-list-item *ngFor="let ing of item.ingredients">
-            {{ ing.quantity }} {{ ing.unit }} of {{ ing.name }}
+            <div *ngIf="ing.quantity < 2; else plural">
+              {{ ing.quantity }} {{ ing.unit }} of {{ ing.name | lowercase}}
+            </div>
+            <ng-template #plural>
+              {{ ing.quantity }} {{ ing.unit }}s of {{ ing.name | lowercase}}
+            </ng-template>
           </mat-list-item>
         </mat-list>
       </div>
@@ -30,19 +35,19 @@
       </div>
     </mat-expansion-panel>
   </mat-accordion>
-  <button class="add" mat-raised-button color="accent" (click)="goToAddFoodComponent()">
-    <i class="material-icons">
-      add
-    </i>
-  </button>
 </div>
-<ng-template #noFood>
-  <div class="spinner-container">
+<ng-template #loading>
+  <div class="spinner-container" *ngIf="stillLoading; else notLoading">
     <mat-spinner></mat-spinner>
   </div>
-  <button class="add" mat-raised-button color="accent" (click)="goToAddFoodComponent()">
-    <i class="material-icons">
-      add
-    </i>
-  </button>
+  <ng-template class="spinner-container" #notLoading>
+    <div class="spinner-container">
+      <h2>Sorry, no food!</h2>
+    </div>
+  </ng-template>
 </ng-template>
+<button class="add" mat-raised-button color="accent" (click)="goToAddFoodComponent()">
+  <i class="material-icons">
+    add
+  </i>
+</button>
