--- a/src/app/home/initial-form/initial-form.component.html
+++ b/src/app/home/initial-form/initial-form.component.html
@@ -5,7 +5,7 @@
     </mat-card-header>
     <mat-card-content>
       <form *ngIf="registrationForm; else loading" [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
-        <div (click)="checkPasswordsMatch()">
+        <div>
           <mat-form-field>
             <input matInput placeholder="First Name" formControlName="firstName" required />
           </mat-form-field>
@@ -15,33 +15,46 @@
           <mat-form-field>
             <input matInput placeholder="Email" formControlName="email" required />
           </mat-form-field>
-          <mat-form-field>
-            <input matInput type="password" placeholder="Password" formControlName="password" required />
-          </mat-form-field>
-          <mat-form-field>
-            <input matInput type="password" placeholder="Confirm Password" formControlName="confirmPass" required />
-          </mat-form-field>
-          <mat-error *ngIf="
-                registrationForm.controls['confirmPass'].touched &&
-                !passwordsMatch
-              ">
-            Your passwords do not match
-          </mat-error>
-          <mat-form-field>
-            <input matInput [matDatepicker]="picker" placeholder="Birthday" formControlName="birthday" required />
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
-          <div class="groupId">
-            <mat-form-field id="groupId">
-              <input matInput placeholder="Group ID" formControlName="groupId" required />
+          <div class="birthday-portion">
+            <mat-form-field class="birthday">
+              <input matInput [matDatepicker]="picker" placeholder="Birthday" formControlName="birthday" required />
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
-
             <div class="portion">
               <mat-label>Portion: {{ registrationForm.value.portion }}</mat-label>
               <mat-slider required min="0" max="3" step="0.5" thumbLabel formControlName="portion"></mat-slider>
             </div>
           </div>
+          <hr />
+          <h3 class="center mat-h3" *ngIf="!isNewGroup">Existing Group</h3>
+          <h3 class="center mat-h3" *ngIf="isNewGroup">New Group</h3>
+          <hr />
+          <div class="groupCred" *ngIf="!isNewGroup; else newGroup">
+            <mat-form-field id="groupId">
+              <input matInput placeholder="Group ID" formControlName="groupId" required />
+            </mat-form-field>
+            <mat-form-field id="groupIdPassword">
+              <input matInput placeholder="Group Password" formControlName="groupIdPassword" type="password" required />
+            </mat-form-field>
+          </div>
+          <ng-template class="groupCred" #newGroup>
+            <div formGroupName="groupCredentials">
+              <mat-card-content>
+                <mat-form-field>
+                  <input matInput placeholder="Group ID" formControlName="newGroupId" type="text" required />
+                </mat-form-field>
+                <mat-form-field>
+                  <input matInput placeholder="Group Password" formControlName="newGroupIdPassword" type="password"
+                    required />
+                </mat-form-field>
+                <mat-form-field>
+                  <input matInput placeholder="Confirm Password" formControlName="confirmIdPassword" type="password"
+                    required />
+                </mat-form-field>
+              </mat-card-content>
+            </div>
+          </ng-template>
         </div>
         <div>
           <mat-slide-toggle (change)="toggleNewGroup()">
@@ -55,9 +68,11 @@
           <button mat-raised-button color="warn" type="button" (click)="onCancel()">CANCEL</button>
         </mat-card-actions>
       </form>
-      <ng-template #loading>
-        <mat-spinner></mat-spinner>
-      </ng-template>
+      <div class="spinner">
+        <ng-template #loading>
+          <mat-spinner></mat-spinner>
+        </ng-template>
+      </div>
     </mat-card-content>
   </mat-card>
 </div>
