--- a/src/app/events/list-events/upcoming-events/upcoming-events.component.html
+++ b/src/app/events/list-events/upcoming-events/upcoming-events.component.html
@@ -11,7 +11,8 @@
       </mat-expansion-panel-header>
       <div class="expanded-panel">
         <div class="food">
-          <button mat-raised-button color="primary" class="event-food">See Event Food</button>
+          <button mat-raised-button color="primary" class="event-food" (click)="navigateToDetails(event.id)">See Event
+            Details</button>
         </div>
         <div class="edit">
           <button mat-raised-button color="primary">
