--- a/src/app/group/list-group/list-group.component.html
+++ b/src/app/group/list-group/list-group.component.html
@@ -6,7 +6,7 @@
           {{ user.firstName | titlecase }} {{ user.lastName | titlecase }}
         </mat-panel-title>
         <mat-panel-description>
-          Events Attended: 0
+          Events Attended: {{ user.eventsAttended ? user.eventsAttended : 0 }}
         </mat-panel-description>
       </mat-expansion-panel-header>
 
@@ -18,6 +18,7 @@
         <mat-panel-description>
           Portion: {{ user.portion }}
         </mat-panel-description>
+        <button mat-raised-button color="primary">Profile</button>
       </div>
     </mat-expansion-panel>
   </mat-accordion>
