--- a/src/app/food/create-food/create-food.component.html
+++ b/src/app/food/create-food/create-food.component.html
@@ -1,58 +1,52 @@
-<mat-card class="content">
-  <form [formGroup]="addFoodForm" *ngIf="addFoodForm" (ngSubmit)="submitHandler()">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Add a Food</mat-card-title>
-    </mat-card-header>
-    <mat-card-subtitle>Please input food based off of single portions</mat-card-subtitle>
-    <hr />
-    <div>
-      <mat-form-field>
-        <input matInput placeholder="Food name" formControlName="name" required />
-      </mat-form-field>
-    </div>
-    <div formArrayName="ingredients" *ngFor="let ingredient of ingredientForms.controls; let i = index">
+<div class="container">
+  <mat-card class="content">
+    <form [formGroup]="addFoodForm" *ngIf="addFoodForm" (ngSubmit)="submitHandler()">
+      <mat-card-header>
+        <mat-card-title>Add a Food</mat-card-title>
+      </mat-card-header>
+      <mat-card-subtitle>Please input food based off of single portions</mat-card-subtitle>
+      <hr />
       <div>
-        <div [formGroupName]="i">
-          <div>
-            <mat-form-field>
-              <input matInput placeholder="Ingredient Name" formControlName="name" required />
-            </mat-form-field>
-            <i class="material-icons" id="delete" (click)="deleteIngredient(i)">
-              backspace
-            </i>
-          </div>
-          <div>
-            <mat-form-field id="quantity">
-              <input matInput placeholder="Quantity" formControlName="quantity" required />
-            </mat-form-field>
-            <mat-form-field id="unit" *ngIf="measurementSub$ | async as measurements">
-              <mat-label>Unit</mat-label>
-              <mat-select formControlName="unit" class="select" required>
-                <mat-option (click)="addNewUnit()" class="blue">
-                  + measurement
-                </mat-option>
-                <mat-option *ngFor="let item of measurements" [value]="item.fullName">
-                  {{ item.fullName | lowercase}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Food name" formControlName="name" required />
+        </mat-form-field>
+      </div>
+      <div formArrayName="ingredients" *ngFor="let ingredient of ingredientForms.controls; let i = index">
+        <div>
+          <div [formGroupName]="i">
+            <app-pick-ingredient [formGroupName]="i"></app-pick-ingredient>
+            <div>
+              <mat-form-field id="quantity">
+                <input matInput placeholder="Quantity" formControlName="quantity" required />
+              </mat-form-field>
+              <mat-form-field id="unit" *ngIf="measurementSub$ | async as measurements">
+                <mat-label>Unit</mat-label>
+                <mat-select formControlName="unit" class="select" required>
+                  <mat-option (click)="addNewUnit()" class="blue">
+                    + measurement
+                  </mat-option>
+                  <mat-option *ngFor="let item of measurements" [value]="item.fullName">
+                    {{ item.fullName | lowercase}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
           </div>
         </div>
+        <hr />
       </div>
-      <hr />
-    </div>
-    <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit" [disabled]="!addFoodForm.valid">
-        SAVE
-      </button>
-      <button mat-raised-button color="warn" type="button" (click)="cancelHandler(addFoodForm.touched)">
-        CANCEL
-      </button>
-      <button mat-raised-button color="primary" type="button" (click)="addIngredientButtonClick()"
-        [disabled]="!ingredientFormIsValid()">
-        Add Ingredient
-      </button>
-    </mat-card-actions>
-  </form>
-</mat-card>
+      <mat-card-actions>
+        <button mat-raised-button color="primary" type="submit" [disabled]="!addFoodForm.valid">
+          SAVE
+        </button>
+        <button mat-raised-button color="warn" type="button" (click)="cancelHandler(addFoodForm.touched)">
+          CANCEL
+        </button>
+        <button mat-raised-button color="primary" type="button" (click)="addIngredientButtonClick()"
+          [disabled]="!ingredientFormIsValid()">
+          Add Ingredient
+        </button>
+      </mat-card-actions>
+    </form>
+  </mat-card>
+</div>
