--- a/src/app/food/create-food/create-food.component.scss
+++ b/src/app/food/create-food/create-food.component.scss
@@ -1,5 +1,23 @@
+.container {
+  margin-top: 55px;
+}
+
 .mat-form-field-appearance-legacy .mat-form-field-infix {
   font-size: small;
+}
+
+mat-card-header {
+  display: flex;
+  justify-content: center;
+}
+
+mat-card-title {
+  font-weight: bold;
+  float: left;
+}
+
+mat-card-subtitle {
+  font-size: 0.95em;
 }
 
 #delete {
@@ -7,12 +25,16 @@
 }
 
 mat-form-field {
-  width: 80%;
+  width: 100%;
 }
 
 #quantity,
 #unit {
-  width: 40%;
+  width: 45%;
+}
+
+#unit {
+  float: right;
 }
 
 mat-select .select {
