--- a/src/app/group/list-group/list-group.component.html
+++ b/src/app/group/list-group/list-group.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <mat-accordion *ngIf="group$ | async as group">
+<div class="container" *ngIf="group$ | async as group; else loading">
+  <mat-accordion>
     <mat-expansion-panel *ngFor="let user of group">
       <mat-expansion-panel-header>
         <mat-panel-title>
@@ -23,3 +23,11 @@
     </mat-expansion-panel>
   </mat-accordion>
 </div>
+<ng-template #loading>
+  <app-waiting [statement]="statement" [stillLoading]="stillLoading"></app-waiting>
+  <button class="add" mat-raised-button color="accent">
+    <i routerLink="create" class="material-icons">
+      add
+    </i>
+  </button>
+</ng-template>
