--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,11 +11,14 @@ $custom-typography: mat-typography-config(
   $body-1: mat-typography-level(16px, 24px, 500)
 );
 
+@include angular-material-typography($custom-typography);
+
 html,
 body {
   height: 100%;
   overflow-x: hidden;
 }
+
 body {
   margin: 0;
   padding-top: 50px;
