--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,14 +15,13 @@ $custom-typography: mat-typography-config(
 
 html,
 body {
-  margin-top: 60px;
-  height: 100%;
+  margin-top: 50px;
+  height: auto;
   overflow-x: hidden;
 }
 
 body {
   margin: 0;
-  padding-top: 50px;
   height: auto;
   font-family: 'Montserrat', sans-serif;
   background-attachment: fixed;
