--- a/src/app/home/login/user-login/user-login.component.scss
+++ b/src/app/home/login/user-login/user-login.component.scss
@@ -1,6 +1,6 @@
 .container {
   background-color: rgba(240, 248, 255, 0.9);
-  height: auto;
-  overflow: hidden;
+  position: absolute;
+  top: 57px;
   padding-top: 0;
 }
