--- a/src/app/food/create-food/create-food.component.scss
+++ b/src/app/food/create-food/create-food.component.scss
@@ -40,3 +40,12 @@ mat-form-field {
 mat-select .select {
   max-height: 100vh !important;
 }
+
+.block {
+  display: flexbox;
+  justify-content: space-between;
+}
+
+i {
+  padding-left: 20px;
+}
